src/objects/WGUFEToDo__c.object
<CustomObject>
    <description>Custom object to manage the definition of task sets for field experiences. The instance of a task list is managed via the Task records associated with a FieldExperience__c record via the StudentTask record type.</description>
    <fields>
        <fullName>AfterCompletionMessage__c</fullName>
        <description>A Message to display to the student after the task is complete</description>
        <inlineHelpText>Supply a message that will be displayed to the student when this class is complete (instead of the instructions).</inlineHelpText>
        <label>After Completion Message</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CardIndex__c</fullName>
        <description>Index for UI purposes</description>
        <label>CardIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletionCriteria__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>The value that determines pass/fail or complete/incomplete</description>
        <inlineHelpText>The score or pass/fail value for determining task completion</inlineHelpText>
        <label>Completion Criteria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionURL__c</fullName>
        <description>A URL for the content or completion of the TO DO</description>
        <inlineHelpText>Specify a URL for the TO DO content or task completion, if any.</inlineHelpText>
        <label>CompletionURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FECheckboxFieldName__c</fullName>
        <description>The API Fieldname that should be set to true when the associated To Do item is completed</description>
        <inlineHelpText>Specify the API Fieldname that should be set to true when the associated To Do item is completed</inlineHelpText>
        <label>FE Checkbox FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEFieldName__c</fullName>
        <description>The API Fieldname on the FieldExperience__c object that might hold a data value for this To Do item, such as State__c of licensure.</description>
        <inlineHelpText>Supply the Fieldname on the FieldExperience__c object, if any, that would hold the value provided by the student, such as State of Licensure.</inlineHelpText>
        <label>FE FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions for completing the task</description>
        <inlineHelpText>Specify instructions for completing this task, the instructions will be visible to students</inlineHelpText>
        <label>Instructions</label>
        <length>6768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NextCardIndex__c</fullName>
        <description>Index of Card to be displayed next in the sequence</description>
        <label>NextCardIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrerequisiteToDo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for defining dependency between To Do items, if any.</description>
        <inlineHelpText>Select the WGU FE ToDo item that must be completed before this item can be completed, if any.</inlineHelpText>
        <label>Prerequisite ToDo</label>
        <referenceTo>WGUFEToDo__c</referenceTo>
        <relationshipLabel>WGU FE ToDo</relationshipLabel>
        <relationshipName>SubordinateToDos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentTaskCode__c</fullName>
        <description>The item identifier for locating the data in the StudentCompletionTask__c Name field</description>
        <inlineHelpText>Specify the task or assessment id for verifying this data item (the lookup value)</inlineHelpText>
        <label>Student Task Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskDurationDays__c</fullName>
        <description>How many days are provided to complete the task?</description>
        <inlineHelpText>How many days are provided to complete the task?</inlineHelpText>
        <label>Task Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualforceComponentName__c</fullName>
        <label>VisualforceComponentName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipName>WGUFETasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isBannerDataVerificationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean used to indicate the task requires data verification from the Banner SIS</description>
        <inlineHelpText>Indicate if this task requires verification of Banner SIS data.</inlineHelpText>
        <label>is Banner Data Verification Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFileUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a student will upload a file in completion of this task.</description>
        <inlineHelpText>Check if a student will upload a file in completion of this task, such as a photo or resume.</inlineHelpText>
        <label>is File Upload?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isManualVerification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field which indicates that WGU employees verify the completeness of the To Do item, rather than using code automation or self-declared by the student</description>
        <inlineHelpText>Indicate checked if WGU Employees should manually verify this To Do Item, say, by checking TaskStream data, etc.</inlineHelpText>
        <label>is Manual Verification?</label>
        <type>Checkbox</type>
    </fields>
    <label>WGU FE ToDo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SortOrder__c</columns>
        <columns>CardIndex__c</columns>
        <columns>NextCardIndex__c</columns>
        <columns>NAME</columns>
        <columns>isFileUpload__c</columns>
        <columns>FECheckboxFieldName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGU FE ToDo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU FE ToDo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>